namespace StringConcatStrategyApp;

public class GreetingService
{
    // TODO: Declare a private readonly IStringConcatStrategy field and initialize it in the constructor.
    // In the DisplayGreeting method, use the strategy's GenerateGreeting method to generate a greeting for the Person object
    // and display it using Console.WriteLine.
}
