namespace StringConcatStrategyApp;

public record Person(string FirstName, string LastName);