namespace StringConcatStrategyApp;

public static class StringConcatStrategyFactory
{
    // TODO: Implement the factory method to return the appropriate IStringConcatStrategy based on the choice:
    // 1 returns PlusOperatorStrategy, 2 returns StringBuilderStrategy, 3 returns StringFormatStrategy,
    // 4 returns StringInterpolationStrategy, and default returns PlusOperatorStrategy.
}
