namespace StringConcatStrategyApp;

public static class UserInputValidator
{
    public static bool IsValidChoice(string? input, out int choice)
    {
        // TODO: Try to parse the input string to an integer and store it in 'choice'
        // TODO: Define constants for the minimum and maximum valid choices (e.g., 1 and 4)
        // TODO: Use the parsed integer and the constants to determine if the input is valid
        // TODO: Return true if valid, false otherwise

        throw new NotImplementedException();
    }
}